test_programs/compile_failure/noirc_frontend_tests_break_and_continue_in_constrained_fn/src/main.nr

        fn main() {
            for i in 0 .. 10 {
                if i == 2 {
                    continue;
                }
                if i == 5 {
                    break;
                }
            }
        }
    